--- a/js2-skip2.html
+++ b/js2-skip2.html
@@ -10,23 +10,25 @@
         <script type="text/javascript" src="js/js2-1.js"></script>
     </head>
     <body>
-        <div class="header">
-            <button class="btn-1" type="button"><img src="photo/task7-2.png" class="btn-img-1"/ ></button>
-            <span>玩家配比</span>
-            <button class="btn-2" type="button"><img src="photo/circled-help.png" class="btn-img-2" /></button>
-        </div>
-        <div class="main">
-            <h3>玩家配比</h3>
-            <div class="person">
-                <span class="actor-wolf"><img src="photo\js2-1.jpg"><span>杀手 <span id="wolf-num"></span> 人</span> </span>
-                <span class="actor-person"><img src="photo\js2-2.jpg"><span>平民 <span id="person-num"></span>人</span> </span>
+        <div class="container">
+            <div class="header">
+                <button class="btn-1" type="button"><img src="photo/task7-2.png" class="btn-img-1"/ ></button>
+                <span>玩家配比</span>
+                <button class="btn-2" type="button"><img src="photo/circled-help.png" class="btn-img-2" /></button>
             </div>
-            <form class="input-container">
-                <label>
-                    请输入玩家数量<input type="text" class="input"  id="input"><span class="text">玩家数量为4-18</span>
-                </label>
-            </form>
-            <button type="button">去发牌</button>
+            <div class="main">
+                <h3>玩家配比</h3>
+                <div class="person">
+                    <span class="actor-wolf"><img src="photo\js2-1.jpg"><span>杀手 <span id="wolf-num"></span> 人</span> </span>
+                    <span class="actor-person"><img src="photo\js2-2.jpg"><span>平民 <span id="person-num"></span>人</span> </span>
+                </div>
+                <form class="input-container">
+                    <label>
+                        请输入玩家数量<input type="text" class="input"  id="input"><span class="text">玩家数量为4-18</span>
+                    </label>
+                </form>
+                <button type="button">去发牌</button>
+            </div>
         </div>
     </body>
 </html>
