--- a/js3.html
+++ b/js3.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -5,29 +6,31 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
-    <link rel="stylesheet"  type="text/css" href="css/js3.css">
-    <title>Document</title>
+    <title>页面跳转</title>
+    <link rel="stylesheet" type="text/css" href="css/js3.css">
 </head>
-    <body>
-        <div class="header">
-            <button class="btn-1" type="button" id="Back-Icon"><img src="photo/Back-Icon.png" class="btn-img-1"/ ></button>
-            <span>查看身份</span>
-            <button class="btn-2" type="button"><img src="photo/close.png" class="btn-img-2" /></button>
-        </div>
-        <div class="main">
-            <div class="identity">
-                <div class="person-num" id="personNum">1</div>
-                <img src="photo/js3.png" class="photo" id="personRiddle">
-                <div class="person-result" id="personResult">
-                    <img src="photo/js3-1.png" class="photo-result">
-                    <span id="personName" class="person-intrduce">角色：幽灵</span>
-                </div>
+<body>
+<div class="container">
+    <div class="header">
+        <button class="btn-1" type="button"><img src="photo/Back-Icon.png" class="btn-img-1"/ ></button>
+        <span>参数设置</span>
+        <button class="btn-2" type="button"><img src="photo/circled-help.png" class="btn-img-2" /></button>
+    </div>
+    <div class="main">
+        <div class="identity">
+            <div class="person-num" id="personNum">1</div>
+            <img src="photo/js3.png" class="photo" id="personRiddle" />
+            <div class="person-result" id="personResult">
+                <img src="photo/js3-1.png" class="photo-result">
+                <span id="personName" class="person-intrduce">角色：幽灵</span>
             </div>
-        </div>
-        <div class="footer">
-            <button type="button" id="deal">查看1号身份</button>
-        </div>
+         </div>
+    </div>
+    <div class="footer">
+        <button type="button" id="deal">查看1号身份</button>
+    </div>
+
+</div>
 
 
 
@@ -35,6 +38,27 @@
 
 
 
-    <script type="text/javascript" src="js/js3.js"></script>
-    </body>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
+<script type="text/javascript" src="js/js2-1.js"></script>
+</body>
 </html>
