--- a/测试2.html
+++ b/测试2.html
@@ -17,6 +17,11 @@
 <body>
 <div class="box">
     <div class="gradient-icon"></div>
-</div> 
+</div>
+<script>
+ var b=localStorage.getItem('arr');
+ alert(typeof JSON.parse(b));
+</script>
+<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
 </body>
 </html>
