--- a/js3.html
+++ b/js3.html
@@ -6,14 +6,14 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>页面跳转</title>
+    <title>查看身份</title>
     <link rel="stylesheet" type="text/css" href="css/js3.css">
 </head>
 <body>
 <div class="container">
     <div class="header">
         <button class="btn-1" type="button"><img src="photo/Back-Icon.png" class="btn-img-1"/ ></button>
-        <span>参数设置</span>
+        <span>查看身份</span>
         <button class="btn-2" type="button"><img src="photo/circled-help.png" class="btn-img-2" /></button>
     </div>
     <div class="main">
@@ -59,6 +59,6 @@
 
 
 <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
-<script type="text/javascript" src="js/js2-1.js"></script>
+<script type="text/javascript" src="js/js3.js"></script>
 </body>
 </html>
