--- a/task13-2.html
+++ b/task13-2.html
@@ -7,20 +7,22 @@
 	<link rel="stylesheet" type="text/css" href="css\task13-2.css">
 	<script type="text/javascript" src="js\js2.js"></script>
  </head>
- <body>     
- <div class="header">
-  <button class="btn "><img src="photo/task7-1.png"></button>
- </div> 
- <div class="main">
-<div class="top-content ">             
-	<span class="top-content-text">上次游戏:&nbsp;&nbsp;&nbsp;捉鬼猜词版</span>
-	<button type="button" class="button " > <img src="photo/task7-12.png" alt="">
-</button>  
-</div>         
-<div class="list-group">         
-<div class="list-group-item first-list">捉鬼游戏</div>
-<a href="##" class="list-group-item second-list">简化版</a>         
-<div class="list-group-item third-list">有1133个用户正在玩此款游戏</div>
+ <body>
+ <div class="container">
+	 <div class="header">
+	  <button class="btn "><img src="photo/task7-1.png"></button>
+	 </div>
+
+ 	<div class="main">
+		<div class="top-content ">
+			<span class="top-content-text">上次游戏:&nbsp;&nbsp;&nbsp;捉鬼猜词版</span>
+			<button type="button" class="button " > <img src="photo/task7-12.png" alt="">
+		</button>
+		</div>
+		<div class="list-group">
+		<div class="list-group-item first-list">捉鬼游戏</div>
+		<a href="##" class="list-group-item second-list" id="skipLink">简化版</a>
+		<div class="list-group-item third-list">有1133个用户正在玩此款游戏</div>
 					   
 	    <a href="##" class="list-group-item second-list-1">猜词版  </a>
 	    <button type="button" class="button-3" id="skip-btn" >
@@ -37,7 +39,7 @@
 		</div>
 		</div>
 	</div>
-
+ </div>
 
 
 
