--- a/js3.html
+++ b/js3.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>查看身份</title>
     <link rel="stylesheet" type="text/css" href="css/js3.css">
+    <script src="js/js3.js"></script>
 </head>
 <body>
 <div class="container">
