--- a/js4.html
+++ b/js4.html
@@ -6,22 +6,30 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link type="text/css" rel="stylesheet" href="css/js4.css">
+    
+
     <title>法官台本</title>
 </head>
 <body>
 <div class="container">
     <div class="header">
         <button class="btn-1" type="button" id="Back-Icon"><img src="photo/Back-Icon.png" class="btn-img-1"/ ></button>
-        <span>查看身份</span>
+        <span>法官日记</span>
         <button class="btn-2" type="button"><img src="photo/circled-help.png" class="btn-img-2" /></button>
     </div>
-    <div class="main">
+    <div class="main" id="main">
         <div class="main-header">
             <span class="main-header-text">发言讨论结束，请大家投票</span>
-            <audio src="audio/task7.mp3" class="mian-header-audio" id="audio1"></audio>
-            <button class="btn-audio" onclick="playPause()"><img class="btn-play-pause" src="photo/task7-4.png"></button>
             <span class="main-header-triangle"></span>
         </div>
+        <div class="main-content">
+            点击得票数最多人的头像
+        </div>
+        <!--<div class="person-info">-->
+        <!--<div class="person-name">水民</div>-->
+        <!--<span class="person-num">1号</span>-->
+        <!--<img src="photo/task7-5.png" class="person-kill" />-->
+        <!--</div>-->
     </div>
     <div class="footer">
         <button type="button" id="deal"></button>
