--- a/js4-2.html
+++ b/js4-2.html
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link type="text/css" rel="stylesheet" href="css/js4.css">
-    
+    <link type="text/css" rel="stylesheet" href="css/js4-2.css">
+
 
     <title>法官台本</title>
 </head>
@@ -17,13 +17,13 @@
         <span>法官日记</span>
         <button class="btn-2" type="button"><img src="photo/circled-help.png" class="btn-img-2" /></button>
     </div>
-    <div class="main clearfix" id="main">
+    <div class="main" id="main">
         <div class="main-header">
-            <span class="main-header-text">法官是上帝视角</span>
+            <span class="main-header-text"></span>
             <span class="main-header-triangle"></span>
         </div>
-        <div class="main-content">
-            点击“开始游戏”按钮开始游戏
+        <div class="main-content" id="mainContent">
+            点击得票数最多人的头像
         </div>
         <!--<div class="person-info">-->
         <!--<div class="person-name">水民</div>-->
@@ -55,6 +55,6 @@
 
 
 <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script>
-<script type="text/javascript" src="js/js4.js"></script>
+<script type="text/javascript" src="js/js4-2.js"></script>
 </body>
 </html>
